--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret=YmF0dWhhbnNleXJlawAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=batuhanseyrek75@gmail.com
+spring.mail.password=tptu gecz jkus jkca
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
