Projeye sms özelliğini ekledim

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.mail.password=tptu gecz jkus jkca
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
+
+
+twilio.account_sid=your_account_sid_here
+twilio.auth_token=your_auth_token_here
+twilio.phone_number=+905438236265
