--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-jwt.secret=YmF0dWhhbnNleXJlawAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+
 
 
 spring.mail.host=smtp.gmail.com
@@ -22,3 +22,6 @@ spring.mail.default-encoding=UTF-8
 twilio.account_sid=your_account_sid_here
 twilio.auth_token=your_auth_token_here
 twilio.phone_number=+905438236265
+
+# (VARSAYILAN) CORS için custom header?lar gerekiyorsa
+spring.mvc.cors.allowed-origins=http://localhost:3000
