--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,29 @@
 spring.application.name=rezarvasyonSistemi
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.jpa.properties.hibernate.default_schema=rezervasyon
+
+# PostgreSQL ba?lant?s?
+spring.datasource.url=jdbc:postgresql://localhost:5435/centraldb
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-
-
+# Mail ayarlar? (Gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=batuhanseyrek75@gmail.com
 spring.mail.password=tptu gecz jkus jkca
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.default-encoding=UTF-8
 
-
+# Twilio
 twilio.account_sid=your_account_sid_here
 twilio.auth_token=your_auth_token_here
 twilio.phone_number=+905438236265
 
-# (VARSAYILAN) CORS için custom header?lar gerekiyorsa
+# CORS ayarlar?
 spring.mvc.cors.allowed-origins=http://localhost:3000
