--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ twilio.phone_number=+905438236265
 
 # CORS ayarlar?
 spring.mvc.cors.allowed-origins=http://localhost:3000
+
+server.forward-headers-strategy=framework
